--- a/guis/flut/pubspec.yaml
+++ b/guis/flut/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flut
+name: s0lv1t
 description: "A new Flutter project."
 publish_to: 'none'
 version: 0.1.0
@@ -9,11 +9,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  window_manager:
+    git:
+      url: https://github.com/leanflutter/window_manager.git
+      ref: main
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
