switching from Material Design to Fluent UI

--- a/guis/flut/pubspec.yaml
+++ b/guis/flut/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
     git:
       url: https://github.com/leanflutter/window_manager.git
       ref: main
+  fluent_ui:
+    git: https://github.com/bdlukaa/fluent_ui.git
 
 dev_dependencies:
   flutter_test:
